edited github pipline file to change dev naming to staging

--- a/.github/workflows/terraform-pipeline-staging.yaml
+++ b/.github/workflows/terraform-pipeline-staging.yaml
@@ -91,7 +91,7 @@ jobs:
         uses: hashicorp/setup-terraform@v1
         with:
           # terraform_version: 0.13.0:
-          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN_DEV }}
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN_STAGING }}
 
       # - name: debug1
       #   id: debug1
